persist data big fix and merged code commit